...
import java.text.SimpleDateFormat
import java.util.*

object FeedsOverviewTestTags {
  const val ADD_POST_BUTTON = "AddPostButton"
  const val POST_CARD_PREFIX = "Post/"
  const val SEARCH_TEXT_FIELD = "PostSearchTextField"
  const val SEARCH_CLEAR = "PostSearchClear"
}

object PostOverviewScreenUi {
  val xxxLargePadding = Dimensions.Padding.xxxLarge
}

...
