...
  const val POST_PAGE_SUBTITLE = "Share your gaming experiences with the world"
  const val MAP_EXPLORATION_SUBTITLE = "Find board game shops and rental spaces near you"
  const val MAP_EXPLORATION_END_TEXT =
      "Browse shops, compare prices, and discover venues for your next game night!"
  const val POSTS_PAGE_END_TEXT =
      "Connect with gamers worldwide! Share strategies, reviews, and join the conversation about your favorite games."
  const val BOARD_GAME_NIGHT = "Board Game Night"
  const val FIVE_NEW_MESSAGES = "5 new messages"
  const val PARTICIPANTS_SECTION_TEXT = "Participants"
  const val PARTICIPANT_1 = "Alexandre"
  const val PARTICIPANT_2 = "Thomas"
  const val DATE_PREVIEW = "Date"
  const val TIME_PREVIEW = "Time"
...
